[gd_scene load_steps=4 format=3 uid="uid://ckny1qfrmcpm7"]

[ext_resource type="Texture2D" uid="uid://bys166oekr06o" path="res://Sprites/Screenshots/level_preview_basic.png" id="1_b0cnk"]
[ext_resource type="Script" path="res://Scripts/stage_picker.gd" id="1_vh65y"]
[ext_resource type="Theme" uid="uid://cyij5s8lhrrvn" path="res://Themes/little_guy_theme.tres" id="2_ytm25"]

[node name="StagePicker" type="PanelContainer"]
offset_right = 192.0
offset_bottom = 352.0
theme = ExtResource("2_ytm25")
script = ExtResource("1_vh65y")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="StageName" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Stage Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StagePreview" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
texture = ExtResource("1_b0cnk")
expand_mode = 1

[node name="Highscore" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "BEST: 50000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnterButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
theme_override_font_sizes/font_size = 32
text = "ENTER"

[connection signal="pressed" from="VBoxContainer/EnterButton" to="." method="_on_enter_button_pressed"]
